--- a/main.tex
+++ b/main.tex
@@ -5,7 +5,11 @@
 
 \begin{document}
 \begin{multicols*}{3}
+    \raggedright
     \input{01.tex}
     \input{02.tex}
+    \input{03.tex}
+    \clearpage
+    \todo{ZGS, absolut betrag. Serie 8.1.c}
 \end{multicols*}
 \end{document}
