--- a/02.tex
+++ b/02.tex
@@ -5,7 +5,7 @@
 \begin{itemize}
     \ides{Zufallsvariable (ZV):} $X: \Omega \to \R$
         \begin{itemize}
-            \item Falls $\Sigam$ endlich/abzählbar dann ist Wertebereich $W(X)$ auch endlich
+            \item Falls $\Sigma$ endlich/abzählbar dann ist Wertebereich $W(X)$ auch endlich
         \end{itemize}
     \ides{Verteilungsfunktion (VF)} von $x$: $f_X : \R \to [0,1]$
         \begin{itemize}
