NEW: Finish wahrscheinlichkeiten and start statistik

--- a/main.tex
+++ b/main.tex
@@ -6,9 +6,15 @@
 \begin{document}
 \begin{multicols*}{3}
     \raggedright
+    \part{Wahrscheinlichkeiten}
     \input{01.tex}
     \input{02.tex}
     \input{03.tex}
+    \input{04.tex}
+    \clearpage
+    \part{Statistik}
+    \input{05.tex}
+    \input{06.tex}
     \clearpage
     \todo{ZGS, absolut betrag. Serie 8.1.c}
 \end{multicols*}
