--- a/06.tex
+++ b/06.tex
@@ -2,5 +2,6 @@
 
 \section{Schätzer}
 \begin{itemize}
-    \item  
+    \item Seien $X_1, \dots, X_n$ eine Strichprobe, für die wir ein Modell suche. Wir haben also einen Parameterraum $\Theta$ und für jedes $\theta \in \Theta$ einen Wahrscheinlichkeitsraum $(\Omega, \mc{F}, P_\theta)$. Meistens ist $\Omega \in \R^m$, und wir suchen dann für die Parameter $\theta_1, \dots, \theta_n$ Schätzer $T_1, \dots, T_n$ aufgrund unsere Stichprobe. Solche Schätzer sind Zufallsvariablen der Form $T_j = t_j(X_1, \dots, X_n)$, wobei wir die Schätzfunkton $t_j: \R^n \to \R$ noch geeignet wählen/finden müssen. Einsetzten von Daten $x_i = X_i(\omega), i = 1, \dots, n$ liferd dann Schätzerte $T_j(\omega) = t_j(x_1, \dots, x_n)$ für $\omega_j, j = 1, \dots, m$. Der Kürze halber schreiben wir oft auch $T = (T_1, \dots, T_m)$ und $\theta = (\theta_1, \dots, \theta_m)$.
+    \item Schätzer: ZV, Schätzwert: Zahl
 \end{itemize}
