ADD: Todo markov

--- a/04.tex
+++ b/04.tex
@@ -4,6 +4,7 @@
 \subsection{Ungleichungen}
 \begin{itemize}
     \ides{Markov Ungleichung:} Sei ZV $X$ und $g: \mc{W}(X) \to [0, \infty)$ eine wachsende Funktion. Für jedes $c \in \R$ mit $g(x) \ge 0$ gilt dann $P[X \ge c] \le \frac{E[g(X)]}{g(c)}$
+    \todo{ABS markov}
     \ides{Chebyshev-Ungleichung:} Sei ZV $Y$ mit endlicher Var. Für jedes $b > 0$ gilt: $P[|Y - E[Y] \mid \ge b] \le \frac{Var[Y]}{b^2}$.
     \ides{Chernoff Schranke:}
         \begin{itemize}
