NEW: Start with section Tests

--- a/main.tex
+++ b/main.tex
@@ -15,6 +15,7 @@
     \part{Statistik}
     \input{05.tex}
     \input{06.tex}
+    \input{07.tex}
     \clearpage
     \todo{ZGS, absolut betrag. Serie 8.1.c}
 \end{multicols*}
