--- a/07.tex
+++ b/07.tex
@@ -3,7 +3,7 @@
 \section{Tests}
 \subsection{Grundbegriffe}
 \begin{itemize}
-    \item Wir haben eine Vermutung wo in $\Theta$ der richtige (aber unbekannte) Parameter $\theta$ lieben könnte, und wollten diese mit Hilfe der Daten überprüfen (``testen''). Das Grundproblem ist, eine Entscheidung zwischen zwei konkurrierenden Modellklassen zu treffen: Der \textbf{Hypothese} ($H_0$) $\Theta_0 \subseteq \Theta$ und der \textbf{Alternative} ($H_A$) $\Theta_A \subseteq \Theta$ wobei $\Theta_0 \cap \Theta_A = \emptyset$
+    \item Wir haben eine Vermutung wo in $\Theta$ der richtige (aber unbekannte) Parameter $\theta$ liegen könnte, und wollten diese mit Hilfe der Daten überprüfen (``testen''). Das Grundproblem ist, eine Entscheidung zwischen zwei konkurrierenden Modellklassen zu treffen: Der \textbf{Hypothese} ($H_0$) $\Theta_0 \subseteq \Theta$ und der \textbf{Alternative} ($H_A$) $\Theta_A \subseteq \Theta$ wobei $\Theta_0 \cap \Theta_A = \emptyset$
     \item Hypothese/Alternative heissen:
         \begin{itemize}
             \ides{Einfach:} falls $\Theta_0/\Theta_A$ aus einzelnem Wert $\theta_0/\theta_A$ bestehen
@@ -42,10 +42,10 @@ Seien $\Theta_0 = \{\theta_0\}$ und $\Theta_A = \{\theta_A\}$. Wie oben sei $T :
 Bei zusammengesetzten $\theta_0/\theta_A$ betrachtet man den \textbf{verallgemeinterten LQ} $R(x_1, \dots, x_n) := \frac{\sup_{\theta \in \Theta_A} L(x_1, \dots, x_n; \theta)}{\sup_{\theta \in \Theta_0}L(x_1, \dots, x_n; \theta)}$ oder auch $\overset{\sim}{R}(x_1, \dots, x_n) := \frac{\sup_{\theta \in \Theta_A \cup \Theta_0} L(x_1, \dots, x_n; \theta)}{\sup_{\theta \in \Theta_0}L(x_1, \dots, x_n; \theta)}$. Und wählt als Teststatistik $T_0 := R(X_1, \dots, X_n)$ bzw. $\overset{\sim}{T} := \overset{\sim}{R}(X_1, \dots, X_n)$ mit $K_0 = (c_0, \infty)$. $c_0$ bzw. $K_0$ wählt man so, dass das gewünschte Signifikanzniveau $\alpha$ eingehalten wird.
 
 \subsection{Beispiele}
-\subsubsection{z-Test (Test für EW bei bekannter Var, $\mc{N}(\mu, \sigma^2$))}
+\subsubsection{z-Test (Test für EW bei bekannter Var)}
 Sind $X_1, \dots, X_n$ i.i.d. $\sim \mc{N}(\mu, \sigma^2)$ unter $P_\theta$ mit bekannter Var $\sigma^2$, und wir wollen die Hypothese $H_0: \theta = \theta_0$ testen. Mögliche Alternativen $H_A$ sind $\theta > \theta_0$ oder $\theta < \theta_0$ (\textbf{einseitig}) oder $\theta \neq \theta_0$ (\textbf{zweiseitig}). Die Teststatistik ist $T := \frac{\overline{X}_n - \theta_0}{\frac{\sigma}{\sqrt{n}}} \sim \mc{N}(0, 1)$ unter $P_{\theta_0}$. Der kritische Bereich $K$ ist von der Form $(c_>, \infty)$, $(-\infty, c_<)$, bzw. $(-\infty, -c_{\neq}) \cup (c_{\neq}, + \infty)$. Die Konstanten $c_>, x_<, c_{\neq}$ bestimmt man zum gewählten Niveau mit Hilfe der Verteilung von $T$ unter $P_{\theta_0}$. Zum Beispiel liefert die Bedingung $\alpha = P_{\theta_0}[T \in K_>] = P_{\theta_0}[T > c_>] = 1 - P_{\theta_0}[T \le c_>] = 1 - \Phi(c_>)$, dass $c_> = \Phi^{-1}(1 - \alpha) =: z_{1 - \alpha}$ das sogenannte $(1 - \alpha)$-\textbf{Quantil} der $\mc{N}(0, 1)$ Verteilung sein muss; Für $\theta > \theta_0$ verwirft man $H_0$, falls $\overline{X}_n > \theta_0 + z_{1 - \alpha} \frac{\sigma}{\sqrt{n}}$ ist. Analog ist $c_< = z_\alpha = -z_{1 - \alpha}$ und $c_{\neq} = z_{1 - \frac{\alpha}{2}}$, wobei wir die Symmetrie der $\mc{N}(0, 1)$ Verteilung ausnutzen; Es gilt nämlich $\alpha = P_{\theta_0}[t < c_<] = P_{\theta_0}[T > -c_<]$ für $-c_< = z_{1 - \alpha}$ und $\alpha = P_{\theta_0}[T \in K_{\neq}] = P_{\theta_0} [T < -c_{\neq}] + P_{\theta_0}[T > c_{\neq}] = \Phi(-c_{\neq}) + 1 - \Phi(c_{\neq}) = 2(1 - \Phi(c_{\neq}))$
 
-\subsubsection{t-Test (Test für EW bei unbekannter Var, $\mc{N}(\mu, \sigma^2)$)}
+\subsubsection{t-Test (Test für EW bei unbekannter Var)}
 Sind $X_1, \dots, X_n$ i.i.d. $\sim \mc{N}(\mu, \sigma^2)$ unter $P_{\overrightarrow{\theta}}$ wobei $\overrightarrow{\theta} = (\mu, \sigma^2)$ und die Var $\sigma^2$ ist unbekannt. Wir wollen die Hypothese $\mu = \mu_0$ testen. Explizit: $\Theta_0 = \{\mu_0\} \times (0, \infty) = \{\overrightarrow{\theta} = (\mu, \sigma^2) \mid \mu = \mu_0\}$. Die Teststatistik ist $T := \frac{\overline{X}_n - \mu_0}{\frac{S}{\sqrt{n}}} \sim t_{n - 1}$ unter $P_{\theta_0}$. Wir ersetzen unbekannte Var durch Schätzer $S^2 = \frac{1}{n - 1} \sum_{i=1}^{n} (X_i - \overline{X}_n)^2$ für $\sigma^2$.
 Der Kritische Bereich hat eine der drei Formen aus dem letzten Beispiel; die kritischen Werte hier sind $c_> = t_{n - 1, 1 - \alpha}$, bzw. $c_< = t_{n - 1, \alpha} = -t_{n - 1, 1 - \alpha}$, bzw $c_{\neq} = t_{n - 1, 1 - \frac{\alpha}{2}}$. Hier bezeichnen wir mit $t_{m, \gamma}$ das $\gamma$-\textbf{Quantil} einer $t_m$-Verteilung, d.h. denjenigen Wert $t_{m, \gamma}$, für den gilt $P[X \le t_{m, \gamma}] = \gamma$ für $X \sim t_m$. Diese Werte findet man in Tabellen.
 
@@ -69,3 +69,7 @@ Sind $X_1, \dots, X_n$ i.i.d. $\sim \mc{N}(\mu_X, \sigma^2)$ und $Y_1, \dots, Y_
    $T := \frac{(\overline{X}_n - \overline{Y}_m) - (\mu_X - \mu_Y)}{S \sqrt{\frac{1}{n} + \frac{1}{m}}} \sim t_{n + m - 2}$ unter jedem $P_\theta$. Der Rest geht analog wie oben.
 \end{itemize}
 
+\subsection{Der P-Wert}
+\begin{itemize}
+    \item Sei $X_1, \dots, X_n$ eine Stichprobe. Wir wollen eine Hypothese $H_0$ gegen eine Alternative $H_A$ testen. Bei einem Test zum Niveau $\alpha$ wird die Hypothese abgelehnt, wenn $T(\omega) = t(x_1, \dots, x_n)$ einen Wert in $K$ ergibt, und wir haben $P_{\theta_0} [T \in K] \le \alpha$. Alternativ kann man auch den sogenannten \textbf{p-Wert} berechnen. Sei $\overrightarrow{x} = (x_1, \dots, x_n)$ der Vektor unserer Daten und $\overrightarrow{X} = (X_1, \dots, X_n)$ unsere Stichprobe. Wir brauchen zuerst für jedes Niveau $\alpha \in [0, 1]$ einen Test $\phi_\alpha(\overrightarrow{x}) = I_{\{t(\overrightarrow{x}) \in K_\alpha\} }$ mit $T = t(\overrightarrow{X})$ und kritischen Bereich $K_\alpha$ mit $P_\theta[T \in K_\alpha] \le \alpha \ \forall \theta \in \Theta_0$. Zudem muss gelten, dass diese Tests kompatibel sind in dem Sinn, dass aus $\alpha' < \alpha$ immer folgt, dass $\phi_{\alpha'} \le \phi_\alpha$, d.h. falls man die Hypothese auf einem Niveau $\alpha$ nicht verwirft, so kann man sie auf einem kleineren Niveau $\alpha'$ auch nicht verwerfen. Dann definieren wir $\pi(\overrightarrow{x}) := \inf \{\alpha \in [0, 1] \mid \phi_\alpha(\overrightarrow{x}) = 1\}$, und der p-Wert ist dann gegeben durch; p-Wert $= \pi(\overrightarrow{X})$. Wie die Stichprobe ist der p-Wert eine ZV weil er von den Daten abhängt.
+\end{itemize}
