IMPROVE: adjust to cheatsheet and minor adjustments

--- a/main.tex
+++ b/main.tex
@@ -1,22 +1,19 @@
-\documentclass{article}
+\documentclass[8pt]{article}
 
 \usepackage{cheatsheet}
 \usepackage{math}
 
 \begin{document}
-\begin{multicols*}{3}
+\begin{multicols*}{4}
     \raggedright
     \part{Wahrscheinlichkeiten}
     \input{01.tex}
     \input{02.tex}
     \input{03.tex}
     \input{04.tex}
-    \clearpage
     \part{Statistik}
     \input{05.tex}
     \input{06.tex}
     \input{07.tex}
-    \clearpage
-    \todo{ZGS, absolut betrag. Serie 8.1.c}
 \end{multicols*}
 \end{document}
