--- a/main.tex
+++ b/main.tex
@@ -21,4 +21,6 @@
     \include{./04_Algorithms.tex}
     \include{./05_NetworkLayer.tex}
 
+    \todo{Mention throughput vs goodput}
+
 \end{document}
